# DR-Musicality

./: .gitignore  Guiro.sf2  Maracas.sf2  README.md  Timbales 1.sf2  claves.sf2  claves_2.sf2  cowbell.sf2  maracas2.sf2  tambourine.sf2
FluidSynthTesting/FluidSynthAPI/: FluidSynthAPI.vcxproj
FluidSynthTesting/FluidSynthTesting/: CMakeLists.txt  FluidSynthTesting.vcxproj  main.c
FluidSynthTesting/libraries/: fluidsynth.lib
SalsaMusicality/: .gitignore  CMakeLists.txt  FluidSynthTesting.sln  Makefile  SalsaMusicality  main.cpp
SalsaMusicality/FluidSynthAPI/: FluidSynthAPI.vcxproj.filters
SalsaMusicality/Main/: CMakeCache.txt  CMakeLists.txt  Makefile  SalsaMusicality  cmake_install.cmake  main.c
SalsaMusicality/SalsaMusicalityGUI/: MainWindow.cs  Program.cs  SalsaMusicalityGUI.csproj  SalsaMusicalityGUI.sln  Setup.cs  SoundLibraryInterface.cs
SalsaMusicality/SalsaMusicalityGUI/Properties/: AssemblyInfo.cs
SalsaMusicality/SalsaMusicalityGUI/gtk-gui/: MainWindow.cs  generated.cs  gui.stetic
SalsaMusicality/SoundFonts/: Timbales 2.sf2  bongo.sf2  timbale.sf2
SalsaMusicality/SoundLibraries/: CMakeLists.txt  Fluidsynth_class.cpp  Fluidsynth_class.h  InstrumentBase.cpp  InstrumentBase.h  InstrumentBongos.cpp  InstrumentBongos.h  InstrumentClave.cpp  InstrumentClave.h  InstrumentCollection.cpp  InstrumentCollection.h  InstrumentCongas.cpp  InstrumentCongas.h  InstrumentCowbell.cpp  InstrumentCowbell.h  PlayNotes_class.cpp  PlayNotes_class.h  SheetMusic.cpp  SheetMusic.h  SoundLibraryInterface.cpp  SoundLibraryInterface.h  libSoundLibraries.dylib
Sound Fonts/: tambourine_loop.sf2  tambourine_shake.sf2
fluidsynth/: CPackConfig.cmake  CPackSourceConfig.cmake  cmake_uninstall.cmake  config.h  fluid_conv_tables.inc.h  fluid_rvoice_dsp_tables.inc.h  fluidsynth.pc  fluidsynth.spec
fluidsynth/src/: config.h  fluidsynth
fluidsynth/src/FluidSynth.framework/Versions/2/: FluidSynth
fluidsynth/src/gentables-prefix/tmp/: gentables-cfgcmd.txt
fluidsynth/src/rvoice/: fluid_rvoice_event.h
fluidsynth/test/: CTestTestfile.cmake
